[package]
name = "pgvpd"
version = "1.0.2"
edition = "2024"
description = "Virtual Private Database for PostgreSQL — tenant isolation at the connection level"
license = "MIT"
repository = "https://github.com/solidcitizen/pgvpd"
homepage = "https://github.com/solidcitizen/pgvpd"
keywords = ["postgres", "rls", "multi-tenant", "proxy", "vpd"]
categories = ["database", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
md-5 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.8"

[[bench]]
name = "throughput"
harness = false
